2010-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/highlighting.c:
   Apply foreground and background colours of the folding margin
   style properly (closes #2998347).


2010-05-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c:
   Avoid connecting signals more than once.


2010-05-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript:
   Don't ignore the 'intltool' check on non-Windows system, instead
   raise a configure error.


2010-05-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Fix marking some strings as translatable (cannot be done in the
   ASSIGNIF macro).
 * src/templates.c, doc/geany.txt, doc/geany.html:
   Reload templates if saving a document in the templates config dir.


2010-05-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, src/search.h, src/document.c, doc/geany.txt,
   doc/geany.html:
   Fix replacing {filename} template wildcard for custom file
   templates with non-default file extension.
   Add search_find_text() for POSIX regex searches.
 * src/templates.c, doc/geany.txt, doc/geany.html:
   Add {project}, {description} template wildcards (#2954737).
 * doc/geany.txt, doc/geany.html:
   Divide template wildcards into groups.
 * src/plugindata.h, src/plugins.c, src/symbols.c,
   plugins/geanyfunctions.h:
   Add symbols_get_context_separator() to plugin API (patch by Colomban
   Wendling, thanks).


2010-05-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Fix setting wrong accelerator for 2 Edit->Commands items (patch by
   Anonymous, thanks; #2995593).
 * src/sciwrappers.c, src/plugindata.h, src/plugins.c,
   plugins/geanyfunctions.h:
   Add sci_set_line_indentation(), sci_get_line_indentation() to API
   (patch by Colomban Wendling, thanks).


2010-04-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c: